Try to fix css scroll snap on ios

--- a/src/style/04-elements/_elements.all.scss
+++ b/src/style/04-elements/_elements.all.scss
@@ -7,7 +7,6 @@
 body>article {
   scroll-snap-align: start;
   scroll-snap-stop: always;
-  -webkit-overflow-scrolling: touch;
   height: 100%;
 }
 
