--- a/src/style/04-elements/_elements.body.scss
+++ b/src/style/04-elements/_elements.body.scss
@@ -1,4 +1,5 @@
 body {
   font-family: "Inter", sans-serif;
   height: 100%;
+  -webkit-overflow-scrolling: touch;
 }
