--- a/src/style/04-elements/_elements.html.scss
+++ b/src/style/04-elements/_elements.html.scss
@@ -2,5 +2,6 @@ html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   overflow-x: hidden;
-  height:100%;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
 }
